removing swagger dependency